# FGTL2D

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  README.md  _config.yml
fgtl/: init.md  quit.md
fgtl_file/: exist_content.md  get_list_file.md  get_list_file_extension.md  get_list_folder.md  its_folder.md
fgtl_sound/: execution_music.md  load_sound.md  play_effect.md  play_music.md  set_volume.md  sound.md  sound_free.md  sound_music_choose.md
first_time/: first_time.md
include/: FGTL.h  FGTL_Event.h  FGTL_File.h  FGTL_Screen.h  FGTL_Sound.h  FGTL_System.h
src/: FGTL.c  FGTL_Event.c  FGTL_File.cpp  FGTL_Screen.cpp  FGTL_Sound.c  FGTL_System.c
